# GuiYuan

./: .gitignore
Development/: 归园-小程序功能设计书.md  归园-服务端功能设计书.md  归园-联调接口规范.md
GuiYuan_Service/: .gitignore  DEPENDENCIES.md  README.md  alembic.ini  install_dependencies.sh  install_dependencies_no_check.sh  pyproject.toml  requirements.txt  vercel.json
GuiYuan_Service/alembic/: env.py  script.py.mako
GuiYuan_Service/app/: config.py  db.py  main.py
GuiYuan_Service/app/api/v1/: admin_router.py  auth_router.py  coin_router.py  decoration_router.py  hosting_router.py  order_router.py  payment_router.py  plant_router.py  plot_router.py  router.py  user_router.py
GuiYuan_Service/app/core/: deps.py  exceptions.py
GuiYuan_Service/app/jobs/: scheduler.py
GuiYuan_Service/app/models/: __init__.py
GuiYuan_Service/app/schemas/: __init__.py
GuiYuan_Service/app/services/: coin_service.py
GuiYuan_Service/app/utils/: common.py  response.py
